--- a/base/src/app/core/navbar/navbar.html
+++ b/base/src/app/core/navbar/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <span class="glyphicon glyphicon-home"></span> This Dot
+        <img src="assets/images/logo.png" /> This Dot
       </a>
     </div>
 
