--- a/work/src/app/core/navbar/navbar.html
+++ b/work/src/app/core/navbar/navbar.html
@@ -2,14 +2,13 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <span class="glyphicon glyphicon-home"></span> This Dot
+        <img src="assets/images/logo.png" /> This Dot
       </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li><a ng-href="#/all-shows">All Shows</a></li>
-        <li><a ng-href="#/favorite-shows">Favorite Shows</a></li>
+        <li ng-repeat="navItem in vm.navItems"><a ng-href="{{navItem.url}}">{{navItem.text}}</a></li>
       </ul>
     </div>
   </div>
