--- a/work/src/app/core/navbar/navbar.html
+++ b/work/src/app/core/navbar/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <img src="assets/images/logo.png" /> This Dot
+        <img src="../../../assets/images/logo.png" /> This Dot
       </a>
     </div>
 
