--- a/work/src/app/index.scss
+++ b/work/src/app/index.scss
@@ -3,9 +3,9 @@
  *  The list of variables are listed here bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss
  */
 $navbar-inverse-link-color: #5AADBB;
-$icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
+$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 
-@import './../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
 .browsehappy {
   margin: 0.2em 0;
@@ -68,9 +68,4 @@ shows .show__description {
   margin-bottom: 16px;
 }
 
-/**
- *  Do not remove the comments below. It's the markers used by gulp-inject to inject
- *  all your sass files automatically
- */
-// injector
-// endinjector
+@import './core/navbar/navbar.scss';
